photo-keeper-api-authorization - configurations were updated

--- a/PhotoKeeper.Api/PhotoKeeper.Api/appsettings.json
+++ b/PhotoKeeper.Api/PhotoKeeper.Api/appsettings.json
@@ -13,6 +13,10 @@
     "DatabaseSettings": {
         "ConnectionString": "Host=localhost;Port=5432;Username=postgres;Password=postgres;Database=photokeeper_db;"
     },
+    // enter your FrontEnd client options
+    "ClientSettings": {
+        "ClientAddress": "http://localhost:8000"
+    },
     "Logging": {
         "LogLevel": {
             "Default": "Information",
