--- a/PhotoKeeper.Api/PhotoKeeper.Api/PhotoKeeper.Api.csproj
+++ b/PhotoKeeper.Api/PhotoKeeper.Api/PhotoKeeper.Api.csproj
@@ -14,6 +14,7 @@
     <PackageReference Include="BCrypt.Net" Version="0.1.0" />
     <PackageReference Include="EFCore.NamingConventions" Version="6.0.0" />
     <PackageReference Include="MailKit" Version="3.2.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="6.0.5" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.4" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Proxies" Version="6.0.4" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.4">
@@ -30,7 +31,9 @@
 
   <ItemGroup>
     <Folder Include="Authorization\" />
+    <Folder Include="Migrations\" />
     <Folder Include="Tools\" />
+    <Folder Include="wwwroot\" />
   </ItemGroup>
 
 </Project>
